Overflow fixes for lots of condors in the summary. Closes #74

--- a/css/classification-summary.styl
+++ b/css/classification-summary.styl
@@ -25,7 +25,10 @@
     opacity: 0
 
   .summary-container
+    box-sizing: border-box
     left: 50%
+    max-width: 100%
+    padding: 30px
     position: absolute
     top: 50%
     transform: translate(-50%, -50%)
@@ -55,6 +58,7 @@
 
   .condors
     margin: 2em auto
+    overflow-x: auto
     white-space: nowrap
 
   .condor-summary
